crates/next-custom-transforms/tests/errors/server-actions/server-graph/20/output.js
export async function fn() {
    'use server';
}
